rules.v4
# Generated by iptables-save v1.4.21 on Mon Jun 13 14:28:23 2016
*raw
:PREROUTING ACCEPT [74093606:78054232188]
:OUTPUT ACCEPT [6576472:359560903]
COMMIT
# Completed on Mon Jun 13 14:28:23 2016
# Generated by iptables-save v1.4.21 on Mon Jun 13 14:28:23 2016
*nat
:PREROUTING ACCEPT [107861:6184458]
:POSTROUTING ACCEPT [70696:4302361]
:OUTPUT ACCEPT [8085:603447]
-A PREROUTING -i venet0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.122.128:443
-A PREROUTING -i venet0 -p tcp -m tcp --dport 6001 -j DNAT --to-destination 192.168.122.128:6001
-A PREROUTING -i venet0 -p tcp -m tcp --dport 6000 -j DNAT --to-destination 192.168.122.128:6000
-A PREROUTING -i venet0 -p tcp -m tcp --dport 23 -j DNAT --to-destination 192.168.122.128:22
-A PREROUTING -i venet0 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.122.128:80
-A POSTROUTING -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
COMMIT
# Completed on Mon Jun 13 14:28:23 2016
# Generated by iptables-save v1.4.21 on Mon Jun 13 14:28:23 2016
*mangle
:PREROUTING ACCEPT [61575149:60540123428]
:INPUT ACCEPT [162248:14224466]
:FORWARD ACCEPT [61412901:60525898962]
:OUTPUT ACCEPT [150035:19604752]
:POSTROUTING ACCEPT [61560399:60545369656]
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Mon Jun 13 14:28:23 2016
# Generated by iptables-save v1.4.21 on Mon Jun 13 14:28:23 2016
*filter
:INPUT ACCEPT [1499:104207]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [828:90591]
:fail2ban-ssh - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh
-A INPUT -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A FORWARD -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o virbr0 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -i virbr0 -p tcp -m tcp --sport 443 -j ACCEPT
-A FORWARD -o virbr0 -p tcp -m tcp --dport 6001 -j ACCEPT
-A FORWARD -i virbr0 -p tcp -m tcp --sport 6001 -j ACCEPT
-A FORWARD -o virbr0 -p udp -m udp --dport 6000 -j ACCEPT
-A FORWARD -i virbr0 -p udp -m udp --sport 6000 -j ACCEPT
-A FORWARD -o virbr0 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -i virbr0 -p tcp -m tcp --sport 22 -j ACCEPT
-A FORWARD -o virbr0 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -i virbr0 -p tcp -m tcp --sport 80 -j ACCEPT
-A FORWARD -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A FORWARD -i virbr0 -o virbr0 -j ACCEPT
-A FORWARD -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -o virbr0 -p udp -m udp --dport 68 -j ACCEPT
-A fail2ban-ssh -s 116.31.116.33/32 -j REJECT --reject-with icmp-port-unreachable
-A fail2ban-ssh -j RETURN
COMMIT
# Completed on Mon Jun 13 14:28:23 2016
